--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,13 +8,9 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  /* display: flex;
+  justify-content: center;
+  padding: 20px; */
+  background-color: rgb(222, 217, 209);
 }
